<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/width_fragment_large"
    android:layout_height="@dimen/height_fragment_big"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/spacing_med">

    <ImageButton
        android:id="@+id/btnExit"
        android:layout_width="@dimen/size_imagebutton_peripheral"
        android:layout_height="@dimen/size_imagebutton_peripheral"
        android:layout_marginVertical="@dimen/spacing_med"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:elevation="@dimen/spacing_med"
        android:background="@drawable/ic_round_close_24"
        android:contentDescription="@string/cont_desc_close"
        android:onClick="closeBigFrag"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/logo_about"
        android:layout_width="@dimen/size_logo_about"
        android:layout_height="@dimen/size_logo_about"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher_uloader"
        android:contentDescription="@string/cont_desc_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_official"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textAlignment="center"
        android:shadowColor="@color/shadow"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_about"/>

    <TextView
        android:id="@+id/subtitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textColor="@color/shadowInverse"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv"/>

    <TextView
        android:id="@+id/copyright_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_copyright"
        android:textColor="@color/shadowInverse"
        android:textSize="@dimen/text_size_frag_body"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_tv"/>

    <TextView
        android:id="@+id/body_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/mvxgreen_email"
        android:textSize="@dimen/text_size_frag_body"
        android:textStyle="italic"
        android:autoLink="email" />

    <TextView
        android:id="@+id/contact_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small"
        app:layout_constraintBottom_toTopOf="@id/body_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/msg_contact"
        android:textSize="@dimen/text_size_frag_body_small"
        android:textColor="@color/colorWhite" />


</androidx.constraintlayout.widget.ConstraintLayout>